# basic-ecs

./: CMakeLists.txt  README.md
scripts/: entityUpdate.lua
src/: lua_binding.hpp  main.cpp
src/components/: health.hpp  transform.hpp
src/lib/: ecs.cpp  ecs.hpp  ecs.tpp
src/systems/: movement.cpp  movement.hpp
